# tmux-pick

./: .pre-commit-config.yaml  README.md  pick.tmux  pyproject.toml  tmux-pick
tests/: test_parser.py
tmux_pick/: __init__.py  __main__.py  core.py
