[project]
name = "tmux-pick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
  "basedpyright>=1.36.2",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.10",
]

[tool.pytest.ini_options]
pythonpath = "."
